SSB-0033: add get-my-info api
