# swagger/swagger_user.json
@@ -194,6 +194,81 @@
           }
         }
       }
+    },
+    "/user/get-my-info": {
+      "post": {
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
+        "tags": [
+          "get-my-info"
+        ],
+        "summary": "get basic info of user",
+        "description": "get basic info of user",
+        "operationId": "upload-image-presignedURL",
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "$ref": "#/components/schemas/get-my-info" 
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "User without token, or token expired",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Unauthorized."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Not a member",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "example": "Forbidden."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "Internal Server Error"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -313,6 +388,34 @@
           "message": {
             "type": "string",
             "example": "Membership type have been updated!"
+          }
+        }
+      },
+      "get-my-info": {
+        "required": [
+          "id",
+          "provider",
+          "email",
+          "username"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64",
+            "example": 1
+          },
+          "provider": {
+            "type": "string",
+            "example": "native"
+          },
+          "username": {
+            "type": "string",
+            "example": "Jack"
+          },
+          "email": {
+            "type": "string",
+            "example": "example@gmail.com"
           }
         }
       },
